added evidence processing outputs
